--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -7,25 +7,14 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('index') }}">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-        </ul>
         <span class="navbar-text">
             {% if app.user %}
-                You are logged in as {{ app.user.username }}, <a class="btn btn-outline-dark" href="{{ path('app_logout') }}">Logout</a>
+                You are logged in as {{ app.user.username }}, <a class="btn btn-outline-dark"
+                                                                 href="{{ path('app_logout') }}">Logout</a>
             {% else %}
                 <a class="btn btn-outline-dark" href="{{ path('app_login') }}">Login</a>
             {% endif %}
-
-    </span>
+        </span>
     </div>
 </nav>
 
