--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,5 @@
 /* assets/css/app.css */
 html, body {
-    padding:0;
-    margin:0;
     height: 100%;
 }
 
@@ -9,10 +7,6 @@ body {
     background-image: url('/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-body > .container-fluid {
-    padding-top: 116px
 }
 
 /* Header */
@@ -27,19 +21,62 @@ body > .container-fluid {
     box-shadow: 1px 6px 42px 0px rgba(0, 0, 0, 0.57);
 }
 
-#mainContent {
-    border: 1px solid #7eb0db;
-    background-color: rgba(126,176,219,0.3);
+#main {
+    overflow:auto;
+    padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
+#mainMenu {
     background-color: #7eb0db;
-    -webkit-box-shadow: 0px -6px 42px -8px rgba(0,0,0,0.57);
-    -moz-box-shadow: 0px -6px 42px -8px rgba(0,0,0,0.75);
-    box-shadow: 0px -6px 42px -8px rgba(0,0,0,0.75);
+}
+
+#mainMenu {
+    border-left:1px solid #245682;
+    border-right: 1px solid #245682;
+    border-top: 1px solid #245682;
+}
+
+#mainMenu a.nav-link {
+    border-bottom: 1px solid #245682;
+}
+
+.mainContent {
+    border: 1px solid #7eb0db;
+    background-color: rgba(126,176,219,0.3);
+    margin: 0 5px;
+}
+
+.footer {
+    height: 50px;
+    line-height: 50px;
+    background-color: #7eb0db;
+}
+
+label {
+    font-weight: bold;
+}
+/** -- Sortable -- **/
+ul#sortable, .sortable-title {
+    list-style: none;
+    margin: 0;
+    padding:0;
+}
+
+.sortable-title li {
+    font-weight:bold;
+    background-color: #245682;
+}
+
+ul#sortable li,
+.sortable-title li {
+    padding: 2px;
+}
+
+ul.sortable-title li span span .fa-cogs {
+    margin-top:4px;
+}
+
+/** -- custom -- **/
+a.btn-custom {
+    color:#FFFFFF;
 }
