--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,7 +5,7 @@
     {% block stylesheets %}
         {# 'app' must match the first argument to addEntry() in webpack.config.js #}
         {{ encore_entry_link_tags('app') }}
-
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <!-- Renders a link tag (if your module requires any CSS)
              <link rel="stylesheet" href="/build/app.css"> -->
     {% endblock %}
@@ -15,24 +15,43 @@
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
 
+
     <!-- Renders app.js & a webpack runtime.js file
         <script src="/build/runtime.js"></script>
         <script src="/build/app.js"></script> -->
 {% endblock %}
-<div id="header" class="fixed-top">
+<div id="header">
     {% include('header.html.twig') %}
 </div>
-
-<main  id="content" role="main" class="container-fluid">
+<main id="content" role="main" class="container-fluid">
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="row mt-3 mb-3">
+                <div class="col text-center alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    {% if app.user %}
     <div class="row mt-3 mb-3">
-        <div class="col-md-1">&nbsp;</div>
-        <div class="col" id="mainContent">{% block content %}{% endblock %}</div>
-        <div class="col-md-1">&nbsp;</div>
+        <div class="col-md-2 mainContent">
+            {% include('menu.html.twig') %}
+        </div>
+        {%  endif %}
+        <div class="col mainContent">{% block content %}{% endblock %}</div>
     </div>
+
 </main>
-<footer class="footer">
-    <div class="container ligthbleu">
-        {% include('footer.html.twig') %}
+
+<footer class="footer container-fluid">
+    <div class="row">
+        <div class="col text-center">
+            {% include('footer.html.twig') %}
+        </div>
     </div>
 </footer>
 </body>
