--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,20 +1,84 @@
-<!DOCTYPE html>
+{% extends '/layout.html.twig' %}
+{% block content %}
+    <div class="row">
+        <h1 class="col">{% trans %}Products{% endtrans %}</h1>
+    </div>
+    <div class="row mb-3">
+        <div class="col">
+            <a
+                    class="btn btn-sm btn-custom"
+                    href="{{ path('app_archivedproducts') }}"
+                    title="{% trans %}Archived products{% endtrans %}"
+            >
+                &nbsp;<i class="fas fa-hamburger"></i> {% trans %}Archived products{% endtrans %}
+            </a>
+        </div>
+        <div class="col text-right">
+            <a
+                    class="btn btn-sm btn-custom"
+                    href="{{ path('app_addproduct') }}"
+                    title="{% trans %}Add product{% endtrans %}"
+            >
+                <i class="fas fa-plus-square"></i>&nbsp;{% trans %}Add product{% endtrans %}
+            </a>
+        </div>
+    </div>
 
-<title>Hello ProductController!</title>
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <div class="row">
+        <div class="col">
+            <table class="table table-bordered table-custom table table-striped table-sm">
+                <thead class="thead-custom">
+                <tr>
+                    <th>{% trans %}Name{% endtrans %}</th>
+                    <th class="text-center"><i class="fas fa-cogs"></i></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for product in products %}
+                    <tr>
+                        <td>{{ product.name|e }}</td>
+                        <td class="col-md-auto text-center">
+                            <a
+                                    class="btn btn-sm btn-secondary"
+                                    href="{{ path('app_editproduct', {id: product.id}) }}"
+                                    title="{% trans %}Edit product{% endtrans %}"
+                            >
+                                <i class="fas fa-edit"></i>
+                            </a>
+                            <a
+                                    class="btn btn-sm btn-warning"
+                                    href="{{ path('app_archiveproduct', {id: product.id}) }}"
+                                    title="{% trans %}Archive product{% endtrans %}"
+                            >
+                                <i class="fas fa-box"></i>
+                            </a>
+                            <button
+                                    data-type="{% trans %}product{% endtrans %}"
+                                    data-link="{{ path('app_deleteproduct', {id: product.id}) }}"
+                                    data-description="{{ product.name|e }}"
+                                    type="button"
+                                    class="btn btn-sm btn-danger deleteItem"
+                                    data-toggle="modal"
+                                    data-target="#deleteModal"
+                            >
+                                <i class="fas fa-trash-alt"></i>
+                            </button>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="2" class="text-center">{% trans %}No products found.{% endtrans %}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/sander/PhpstormProjects/diabetigraph/src/Controller/ProductController.php'|file_link(0) }}">src/Controller/ProductController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/sander/PhpstormProjects/diabetigraph/templates/product/index.html.twig'|file_link(0) }}">templates/product/index.html.twig</a></code></li>
-    </ul>
-</div>
+            {{ knp_pagination_render(products) }}
+        </div>
+    </div>
+
+
+    {% include 'partial/delete.modal.html.twig' %}
 {% endblock %}
