--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,29 +10,35 @@
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
-                <div class="form-group">
-                    <label for="inputUsername">{% trans %}Username{% endtrans %}</label>
-                    <input type="text"
-                           value="{{ last_username }}"
-                           name="userName" id="inputUsername"
-                           class="form-control"
-                           placeholder="{% trans %}Username{% endtrans %}"
-                           required
-                           autofocus
-                    >
+                <div class="form-group row">
+                    <label class="col-md-4" for="inputUsername">{% trans %}Username{% endtrans %}</label>
+                    <div class="col">
+                        <input type="text"
+                               value="{{ last_username }}"
+                               name="userName" id="inputUsername"
+                               class="form-control"
+                               placeholder="{% trans %}Username{% endtrans %}"
+                               required
+                               autofocus
+                        >
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="inputPassword">{% trans %}Password{% endtrans %}</label>
+                <div class="form-group row">
+                    <label class="col-md-4" for="inputPassword">{% trans %}Password{% endtrans %}</label>
+                    <div class="col">
                     <input type="password" name="password" id="inputPassword" class="form-control"
                            placeholder="{% trans %}Password{% endtrans %}" required>
+                    </div>
                 </div>
                 {#
                 Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
                 See https://symfony.com/doc/current/security/remember_me.html
                 #}
-                <div class="form-check mb-3">
+                <div class="form-check row mb-3">
+                    <div class="col-md-4 offset-md-4">
                     <input type="checkbox" name="_remember_me" class="form-check-input" id="exampleCheck1">
                     <label class="form-check-label" for="exampleCheck1">{% trans %}Remember me{% endtrans %}</label>
+                    </div>
                 </div>
 
                 {#
