--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,5 +1,5 @@
-{% extends '/layout.html.twig' %}
-{% block content %}
+{% extends '/admin/index.html.twig' %}
+{% block admincontent %}
     <div class="row">
         <h1 class="col">{% trans %}Products{% endtrans %}</h1>
     </div>
