--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,6 +1,15 @@
 {% extends '/layout.html.twig' %}
+
+
 {% block content %}
     <div class="row">
-        <h1 class="col">{% trans %}Admin{% endtrans %}</h1>
+        <div class="col-md-2 mainContent">
+            {% include('menu.html.twig') %}
+        </div>
+        <div class="col mainContent">
+            {% block admincontent %}
+                <h1>{% trans %}Admin{% endtrans %}</h1>
+            {% endblock %}
+        </div>
     </div>
 {% endblock %}
