--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,14 +5,14 @@
         <h1 class="col">{% trans %}Sign in{% endtrans %}</h1>
     </div>
     <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col">
             <form method="post">
                 {% if error %}
                     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                 {% endif %}
                 <div class="form-group row">
-                    <label class="col-md-4" for="inputUsername">{% trans %}Username{% endtrans %}</label>
-                    <div class="col">
+                    <label class="col-md-1" for="inputUsername">{% trans %}Username{% endtrans %}</label>
+                    <div class="col-md-2">
                         <input type="text"
                                value="{{ last_username }}"
                                name="userName" id="inputUsername"
@@ -24,10 +24,10 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-md-4" for="inputPassword">{% trans %}Password{% endtrans %}</label>
-                    <div class="col">
-                    <input type="password" name="password" id="inputPassword" class="form-control"
-                           placeholder="{% trans %}Password{% endtrans %}" required>
+                    <label class="col-md-1" for="inputPassword">{% trans %}Password{% endtrans %}</label>
+                    <div class="col-md-2">
+                        <input type="password" name="password" id="inputPassword" class="form-control"
+                               placeholder="{% trans %}Password{% endtrans %}" required>
                     </div>
                 </div>
                 {#
@@ -35,9 +35,10 @@
                 See https://symfony.com/doc/current/security/remember_me.html
                 #}
                 <div class="form-check row mb-3">
-                    <div class="col-md-4 offset-md-4">
-                    <input type="checkbox" name="_remember_me" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">{% trans %}Remember me{% endtrans %}</label>
+                    <div class="col-md-1">&nbsp;</div>
+                    <div class="col-md-2">
+                        <input type="checkbox" name="_remember_me" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">{% trans %}Remember me{% endtrans %}</label>
                     </div>
                 </div>
 
@@ -45,10 +46,26 @@
                 If you want to control the URL the user
                 is redirected to on success (more details below)
                 #}
-                <input type="hidden" name="_target_path" value="/admin"/>
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                <button type="submit" class="btn btn-primary">{% trans %}Sign in{% endtrans %}</button>
+                <div class="form-group row mb-3">
+                    <div class="col-md-2">
+                        <input type="hidden" name="_target_path" value="/admin"/>
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                        <button type="submit" class="btn btn-custom">{% trans %}Sign in{% endtrans %}</button>
+                    </div>
+                </div>
             </form>
+
+
+        </div>
+    </div>
+    <div clas="row">
+        <div class="col">
+            <p>
+                <a href="{{ path('app_registeruser') }}" class="nav-link text-black-50"
+                   title="{% trans %}If you don't have a acoount, register here{% endtrans %}!">
+                    {% trans %}If you don't have a acoount, register here{% endtrans %}!
+                </a>
+            </p>
         </div>
     </div>
 {% endblock %}
