--- a/templates/unit/add.html.twig
+++ b/templates/unit/add.html.twig
@@ -1,7 +1,7 @@
 {% extends '/layout.html.twig' %}
 {% block content %}
     <div class="row">
-        <h1 class="col">{% trans %}Add product group{% endtrans %}</h1>
+        <h1 class="col">{% trans %}Add unit{% endtrans %}</h1>
     </div>
     <div class="row">
         <div class="col-md-4">
