--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <img src="{{ asset('uploads/images/' ~ user.userProfile.imageFilename) }}" class="img-fluid" />
+            <img src="{{ asset('uploads/images/' ~ user.userProfile.avater) }}" alt=""/>
         </div>
         <div class="col">
             <table class="table table-sm table-responsive-md table-borderless">
