--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,10 +4,15 @@ html, body {
 }
 
 body {
-    background-image: url('/background.jpg');
+    background-image: url('/public/build/img/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+body{ display:flex; flex-direction:column; }
+main#content{ flex:1; }
+
+body{ min-height: 100vh; margin:0; }
 
 /* Header */
 #header {
@@ -52,6 +57,8 @@ body {
     background-color: #7eb0db;
 }
 
+
+
 label {
     font-weight: bold;
 }
@@ -89,4 +96,14 @@ a.btn-custom {
     position: absolute;
     bottom: 2px;
     left: 2px;
+}
+
+.image-placeholder {
+    position: relative;
+}
+
+.image-placeholder > .delete-image-btn {
+    position: absolute;
+    top: 5px;
+    right: 20px;
 }
