--- a/templates/user/profile-edit.html.twig
+++ b/templates/user/profile-edit.html.twig
@@ -1,5 +1,11 @@
 {% extends '/layout.html.twig' %}
+
 {% block content %}
+    {{ tinymce_init({
+        theme: {'simple':{'language': app.request.locale, 'menubar': false}},
+        toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent",
+        })
+    }}
     <div class="container">
         <div class="row">
             <h1 class="col">{{ user.userName }}</h1>
@@ -27,22 +33,27 @@
                     <img src="{{ imageUrl }}" class="img-fluid" alt="test"/>
                 {% endif %}
             </div>
+        </div>
+        {{ form_start(form) }}
+        <div class="row">
             <div class="col">
-                {{ form_start(form) }}
-                {{ form_row(form.firstName) }}
-                {{ form_row(form.lastName) }}
-                {{ form_row(form.lastNamePrefix) }}
-                {{ form_row(form.birthday) }}
                 {% if user.getUserProfile.getImage.nameImage is not defined %}
                     {{ form_row(form.image.imageFile) }}
                     {{ form_row(form.image.nameImage) }}
                     {{ form_row(form.image.alt) }}
                     {{ form_row(form.image.descriptionImage) }}
                 {% endif %}
+            </div>
+            <div class="col">
+                {{ form_row(form.firstName) }}
+                {{ form_row(form.lastName) }}
+                {{ form_row(form.lastNamePrefix) }}
+                {{ form_row(form.birthday) }}
+                {{ form_row(form.bio) }}
                 {{ form_row(form.save) }}
-                {{ form_end(form) }}
             </div>
         </div>
+        {{ form_end(form) }}
     </div>
     {% include 'partial/delete.modal.html.twig' %}
 {% endblock %}
